kubernetes/clusters/cluster-0/network/external-services/minio/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.1.11
    ports:
      - port: 9000
        name: s3
      - port: 9001
        name: dashboard
