kubernetes/clusters/cluster-0/network/external-services/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: network
spec:
  clusterIP: None
  ports:
    - name: s3
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: dashboard
      protocol: TCP
      port: 9001
      targetPort: 9001
