kubernetes/clusters/cluster-0/network/external-services/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.${INGRESS_DOMAIN}
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host_dashboard "minio.${INGRESS_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
    - host: &host_s3 "s3.${INGRESS_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - *host_dashboard
        - *host_s3
